package ru.hse.spb.message;

option java_outer_classname = "ProtoBuf";
option optimize_for = LITE_RUNTIME;

message Message {
    required int32 n = 1;
    repeated int32 array = 2;
    optional bool hasNextRequest = 3;
}

message Metrics {
    required int64 sortingTime = 1;
    required int64 requestTime = 2;
}